--- a/package.json
+++ b/package.json
@@ -2,19 +2,36 @@
   "name": "ai-trading-bot-frontend",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://klustech.github.io/aiautobot",  // Add this line
+  "homepage": "https://klustech.github.io/aiautobot", 
   "dependencies": {
-    "axios": "^0.21.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "ethers": "^6.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "axios": "^0.27.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",  // Add this line
-    "deploy": "gh-pages -d build"  // Add this line
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
